# arangodb-client

./: README.md  arangodb-client.cabal
Database/: ArangoDB.hs
Database/ArangoDB/: Collection.hs  Database.hs  Document.hs  Graph.hs  Index.hs  Internal.hs  Key.hs  Types.hs
