name:                arangodb-client
version:             0.0.1.0
license:             BSD3
author:              Joshua Montgomery
maintainer:          josh1s4live@gmail.com
category:            Database
build-type:          Simple
cabal-version:       >= 1.10

library
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

  default-extensions:
    BangPatterns
    LambdaCase
    OverloadedStrings
    TupleSections
    ScopedTypeVariables

  exposed-modules:
    Database.ArangoDB
    Database.ArangoDB.Collection
    Database.ArangoDB.Database
    Database.ArangoDB.Document
    Database.ArangoDB.Graph
    Database.ArangoDB.Index
    Database.ArangoDB.Key
    Database.ArangoDB.Types

  other-modules:
    Database.ArangoDB.Internal

  build-depends:
    aeson                   >= 1.0  && < 1.5,
    attoparsec              >= 0.13 && < 0.14,
    base                    >= 4.8  && < 4.13,
    bytestring              >= 0.10 && < 0.11,
    containers              >= 0.5  && < 0.7,
    http-client             >= 0.6  && < 0.7,
    http-types              >= 0.8  && < 0.13,
    scientific              >= 0.3  && < 0.4,
    text                    >= 1.2  && < 1.3,
    text-show               >= 3.0  && < 4.0,
    unordered-containers    >= 0.2  && < 0.3,
    uuid                    >= 1.3  && < 1.4,
    vector                  >= 0.11 && < 0.13
